gather_facts true

--- a/roles/workshop-playbook/tasks/gather_facts.yaml
+++ b/roles/workshop-playbook/tasks/gather_facts.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Gather Cisco router hostname, OS version, and model
   hosts: cisco
-  gather_facts: no   # we only want network facts
+  gather_facts: true
   tasks:
     - name: Gather IOS facts
       cisco.ios.ios_facts:
