--- a/workshop-playbook.yaml
+++ b/workshop-playbook.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Workshop test
   hosts: cisco
-  gather_facts: true
+  gather_facts: yes
   vars_files:
     - "group_vars/all.yaml"
   roles:
