--- a/roles/workshop-playbook/tasks/main.yaml
+++ b/roles/workshop-playbook/tasks/main.yaml
@@ -1,3 +1,5 @@
 ---
 - name: "Task 1: Gather facts"
   import_tasks: gather-facts.yaml
+- name: "Task 2: Set login banner"
+  import_tasks: login-banner.yaml
