--- a/roles/workshop-playbook/tasks/main.yaml
+++ b/roles/workshop-playbook/tasks/main.yaml
@@ -7,3 +7,5 @@
   import_tasks: configure-snmp.yaml
 - name: "Task 4: Create new user account"
   import_tasks: create-user.yaml
+- name: "Health check"
+  import_tasks: health-check.yaml
