--- a/roles/workshop-playbook/tasks/health-check.yaml
+++ b/roles/workshop-playbook/tasks/health-check.yaml
@@ -11,7 +11,7 @@
 - name: Print hardware_facts
   debug:
     msg:
-      hardware_facts
+      "{{ hardware_facts }}"
 #- name: CPU util check
 #  when:
 #    - hardware_facts.ansible_facts
