--- a/roles/workshop-playbook/tasks/main.yaml
+++ b/roles/workshop-playbook/tasks/main.yaml
@@ -1,11 +1,11 @@
 ---
-- name: "Task 1: Gather facts"
-  import_tasks: gather-facts.yaml
-- name: "Task 2: Set login banner"
-  import_tasks: login-banner.yaml
-- name: "Task 3: Configure SNMP"
-  import_tasks: configure-snmp.yaml
-- name: "Task 4: Create new user account"
-  import_tasks: create-user.yaml
+#- name: "Task 1: Gather facts"
+#  import_tasks: gather-facts.yaml
+#- name: "Task 2: Set login banner"
+#  import_tasks: login-banner.yaml
+#- name: "Task 3: Configure SNMP"
+#  import_tasks: configure-snmp.yaml
+#- name: "Task 4: Create new user account"
+#  import_tasks: create-user.yaml
 - name: "Health check"
   import_tasks: health-check.yaml
